[package]
name = "ckb-light-node-demo"
version = "0.1.0"
authors = ["quake <quake.wang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34"
crossbeam-channel = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
ctrlc = { version = "3.1", features = ["termination"] }
rand = "0.6"
clap = "2.33"
bech32 = "0.6"

jsonrpc-core = "14.0"
jsonrpc-derive = "14.0"
jsonrpc-http-server = "14.0"
jsonrpc-server-utils = "14.0"

ckb-app-config = { git = "https://github.com/nervosnetwork/ckb", branch = "quake/bloom-filter" }
ckb-logger-service = { git = "https://github.com/nervosnetwork/ckb", branch = "quake/bloom-filter" }
ckb-network = { git = "https://github.com/nervosnetwork/ckb", branch = "quake/bloom-filter" }
ckb-logger = { git = "https://github.com/nervosnetwork/ckb", branch = "quake/bloom-filter" }
ckb-logger-config = { git = "https://github.com/nervosnetwork/ckb", branch = "quake/bloom-filter" }
ckb-types = { git = "https://github.com/nervosnetwork/ckb", branch = "quake/bloom-filter" }
ckb-chain-spec = { git = "https://github.com/nervosnetwork/ckb", branch = "quake/bloom-filter" }
ckb-resource = { git = "https://github.com/nervosnetwork/ckb", branch = "quake/bloom-filter" }
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb", branch = "quake/bloom-filter" }
ckb-crypto = { git = "https://github.com/nervosnetwork/ckb", branch = "quake/bloom-filter" }
ckb-hash = { git = "https://github.com/nervosnetwork/ckb", branch = "quake/bloom-filter" }

bloom-filters = { git = "https://github.com/nervosnetwork/bloom-filters" }

[dev-dependencies]
tempfile = "3.0"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { git = "https://github.com/rust-windowing/android-ndk-rs" }
ndk =  { git = "https://github.com/rust-windowing/android-ndk-rs", features = ["trace"] }

[[example]]
name = "android"
crate-type = ["cdylib"]

[dependencies.openssl]
features = ["vendored"]

[[package.metadata.android.permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[[package.metadata.android.permission]]
name = "android.permission.INTERNET"
